argocd/apps/media-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-server
  template:
    metadata:
      labels:
        app: media-server
    spec:
      # initContainers:
      # - name: init-create-folders
      #   image: alpine
      #   command:
      #   - sh
      #   - -c
      #   - |
      #     mkdir -p /mnt/storage/media/{movies,tv}
      #     mkdir -p /mnt/storage/torrents/{movies,tv}
      #     mkdir -p /mnt/storage/config/{bazarr,jackett,jf,qb,radarr}
      #     # chown -R 1000:1000 /mnt/storage/media
      #     # chown -R 1000:1000 /mnt/storage/torrents
      #     # chown -R 1000:1000 /mnt/storage/config
      #   volumeMounts:
      #   - name: media-config
      #     mountPath: /mnt/storage
      containers:
      - name: jellyfin
        image: linuxserver/jellyfin:latest
        ports:
        - containerPort: 8096
        volumeMounts:
        - name: media-config
          mountPath: /config  # Mount the "config" folder to /config
          subPath: config/jf
        - name: media-config
          mountPath: /media
          subPath: media
      - name: jackett
        image: linuxserver/jackett:latest
        ports:
        - containerPort: 9117
        volumeMounts:
        - name: media-config
          mountPath: /config  # Mount the "config" folder to /config
          subPath: config/jackett
        - name: media-config
          mountPath: /media
          subPath: media
      - name: bazarr
        image: linuxserver/bazarr:latest
        ports:
        - containerPort: 6767
        volumeMounts:
        - name: media-config
          mountPath: /config  # Mount the "config" folder to /config
          subPath: config/bazarr
        - name: media-config
          mountPath: /media
          subPath: media
      - name: qb
        image: 	linuxserver/qbittorrent:latest
        ports:
        - containerPort: 32080
        volumeMounts:
        - name: media-config
          mountPath: /config
          subPath: config/qb
        - name: media-config
          mountPath: /media
          subPath: media
      - name: radarr
        image: 	ghcr.io/hotio/radarr
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: media-config
          mountPath: /config
          subPath: config/radarr
        - name: media-config
          mountPath: /media
          subPath: media
      volumes:
      - name: media-config
        persistentVolumeClaim:
          claimName: media-server-pvc
