argocd/apps/media-server/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-server-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-server-test
  template:
    metadata:
      labels:
        app: media-server-test
    spec:
      containers:
      - name: jellyfin
        image: linuxserver/jellyfin:latest
        ports:
        - containerPort: 8096
        volumeMounts:
        - name: media-config
          mountPath: /config  # Mount the "config" folder to /config
          subPath: config/jf
        - name: media-config
          mountPath: /media
          subPath: media
      volumes:
      - name: media-config
        persistentVolumeClaim:
          claimName: media-server-pvc
