argocd/apps/media-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: media-server-service
spec:
  selector:
    app: media-server
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
      nodePort: 32096
      name: jellyfin
    - protocol: TCP
      port: 32080
      targetPort: 32080
      nodePort: 32080
      name: qb
    - protocol: TCP
      port: 7878
      targetPort: 7878
      nodePort: 32078
      name: radarr
    - protocol: TCP
      port: 9117
      targetPort: 9117
      nodePort: 32017
      name: jackett
    - protocol: TCP
      port: 6767
      targetPort: 6767
      nodePort: 32067
      name: bazarr
  type: NodePort
